Better docker build caching

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,8 +3,9 @@ FROM node:10
 RUN npm -g install yarn
 
 WORKDIR /usr/src/app
-COPY . .
+COPY package*.json ./
 RUN yarn install
+COPY . .
 
 RUN yarn build
 EXPOSE 3000
