--- a/iot-gateway/package.json
+++ b/iot-gateway/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
