--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@vx/axis": "^0.0.192",
+    "@vx/curve": "^0.0.192",
+    "@vx/grid": "^0.0.192",
+    "@vx/group": "^0.0.192",
+    "@vx/mock-data": "^0.0.192",
+    "@vx/scale": "^0.0.192",
+    "@vx/shape": "^0.0.192",
+    "@vx/threshold": "^0.0.192",
+    "d3-time-format": "^2.2.1",
     "luxon": "^1.19.3",
     "next": "^9.0.2",
     "react": "^16.8.6",
