--- a/iot-gateway/Dockerfile
+++ b/iot-gateway/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:10
-RUN npm -g install yarn
+RUN npm -g install yarn pm2
 
 WORKDIR /usr/src/app
 COPY package*.json ./
@@ -7,4 +7,4 @@ RUN yarn install
 COPY . .
 
 EXPOSE 8080
-CMD [ "node", "index.js" ]
+CMD [ "pm2-runtime", "index.js" ]
