--- a/iot-gateway/package.json
+++ b/iot-gateway/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-http-proxy": "^1.6.0",
     "isomorphic-fetch": "^2.2.1",
     "redis": "^2.8.0"
   },
